# EthernalEngine

./: .gitignore
EthernalEngine/: EthernalEngine.sln
EthernalEngine/Dependencies/GLAD/include/glad/: glad.h
EthernalEngine/Dependencies/GLAD/src/: glad.c
EthernalEngine/EthernalEngine/: CMakeLists.txt  Camera.cpp  Camera.h  CubeMesh.cpp  CubeMesh.h  DirectionalLight.cpp  DirectionalLight.h  EditorUI.cpp  EditorUI.h  EthernalEngine.vcxproj  EthernalEngine.vcxproj.filters  GameObject.cpp  GameObject.h  Helper.cpp  Helper.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.frag  Shader.h  Shader.vert  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Window.cpp  Window.h  glad.c  imgui.ini  main.cpp
EthernalEngine/EthernalEngine/Assets/Shaders/: DebugShader.vert  Shader.frag
EthernalEngine/EthernalEngine/Include/Components/: Component.h  DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
EthernalEngine/EthernalEngine/Include/Core/: EngineCamera.h  Input.h  Window.h
EthernalEngine/EthernalEngine/Include/Editor/: DirectionalLightEditorUI.h  EditorUI.h  MeshEditorUI.h  PointLightEditorUI.h  SpotLightEditorUI.h
EthernalEngine/EthernalEngine/Include/Helper/: DebugDraw.h  FileHelper.h
EthernalEngine/EthernalEngine/Include/Rendering/: CubeMesh.h  Mesh.h  Model.h  Renderer.h  Shader.h  Texture.h
EthernalEngine/EthernalEngine/Include/Scene/: Camera.h  DirectionalLight.h  GameObject.h  Scene.h  Transform.h
EthernalEngine/EthernalEngine/Source/: main.cpp
EthernalEngine/EthernalEngine/Source/Components/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
EthernalEngine/EthernalEngine/Source/Core/: EngineCamera.cpp  Input.cpp  Window.cpp
EthernalEngine/EthernalEngine/Source/Editor/: DirectionalLightEditorUI.cpp  EditorUI.cpp  MeshEditorUI.cpp  PointLightEditorUI.cpp  SpotLightEditorUI.cpp
EthernalEngine/EthernalEngine/Source/Helper/: DebugDraw.cpp  FileHelper.cpp  Helper.cpp
EthernalEngine/EthernalEngine/Source/Rendering/: CubeMesh.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
EthernalEngine/EthernalEngine/Source/Scene/: Camera.cpp  DirectionalLight.cpp  GameObject.cpp  Scene.cpp  Transform.cpp
